--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
-trax
+# Core ML Libraries
+torch # PyTorch backend
+transformers # Hugging Face models, tokenizers, trainer
+datasets # Hugging Face data loading/processing
+accelerate # Hugging Face utility for distributed training/inference
+
+# Evaluation
+scikit-learn # For metrics like confusion matrix, precision, recall, f1
+
+# Testing
+pytest
