--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,19 @@ google-genai~=1.28
 # OpenRouter HTTP client
 requests>=2.31
 
-# Evaluation
-scikit-learn # For metrics like confusion matrix, precision, recall, f1
-tqdm # Progress bar
+# Evaluation and metrics
+scikit-learn>=1.3.0  # For metrics like confusion matrix, precision, recall, f1
+tqdm>=4.65.0  # Progress bar
+
+# Data validation and type checking
+pydantic>=2.0.0  # Data validation and settings management
+
+# Caching
+cachetools>=5.3.0  # In-memory caching for API responses
+
+# Configuration
+python-dotenv>=1.0.0  # Environment variable management
 
 # Testing (keep here for now; can be split to requirements-dev.txt later if desired)
-pytest
+pytest>=7.4.0
+pytest-cov>=4.1.0  # Test coverage
